--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -30,3 +30,5 @@ add_subdirectory(day10)
 add_subdirectory(day11)
 add_subdirectory(day12)
 add_subdirectory(day13)
+add_subdirectory(day14)
+add_subdirectory(day15)
