--- a/cpp/pixi.toml
+++ b/cpp/pixi.toml
@@ -20,3 +20,4 @@ include-what-you-use = ">=0.23,<0.24"
 libunwind = ">=1.7.2,<2"
 libcxx = ">=19.1.5,<20"
 libcxx-devel = ">=19.1.5,<20"
+hyperfine = ">=1.19.0,<2"
