--- a/cpp/pixi.toml
+++ b/cpp/pixi.toml
@@ -21,3 +21,4 @@ libunwind = ">=1.7.2,<2"
 libcxx = ">=19.1.5,<20"
 libcxx-devel = ">=19.1.5,<20"
 hyperfine = ">=1.19.0,<2"
+python = ">=3.12.12,<3.13"
